[package]
name = "bson2csv"
version = "0.1.0"
edition = "2021"
description = "Convert large BSON dump files (mongodump) to CSV or Parquet, with field selection, filtering, chunk splitting and a post-chunk upload hook (GCS/S3/...)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bson = "2.11"
csv = "1.3"
anyhow = "1.0"
rayon = "1.10"
crossbeam-channel = "0.5"
arrow-array = "59"
arrow-schema = "59"
parquet = { version = "59", default-features = false, features = ["arrow", "snap", "zstd", "flate2-zlib-rs", "lz4"] }

[profile.release]
lto = true
codegen-units = 1
